tests/harness/errors/110_unknown_short_arg.eu
# Mistake: passing an unrecognised short option to parse-args
main: ["-x"] parse-args({})
